force-app/main/default/objects/Return_Line_item__c/Return_Line_item__c.object-meta.xml
<CustomObject>
    <label>Return Line item</label>
    <nameField>
        <displayFormat>Return-Item-{0000}</displayFormat>
        <label>Return Line item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Line items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>