force-app/main/default/objects/Return_Line_item__c/fields/Damage_count__c.field-meta.xml
<CustomField>
    <fullName>Damage_count__c</fullName>
    <label>Damage count</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>