force-app/main/default/objects/Return_Line_item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Return Line items</relationshipLabel>
    <relationshipName>Return_Line_items</relationshipName>
    <type>Lookup</type>
</CustomField>