force-app/main/default/objects/Return_Line_item__c/fields/Return__c.field-meta.xml
<CustomField>
    <fullName>Return__c</fullName>
    <label>Return</label>
    <referenceTo>Returns__c</referenceTo>
    <relationshipLabel>Return Line items</relationshipLabel>
    <relationshipName>Return_Line_items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>