force-app/main/default/objects/Return_Line_item__c/fields/Reuse_count__c.field-meta.xml
<CustomField>
    <fullName>Reuse_count__c</fullName>
    <label>Reuse count</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>