force-app/main/default/objects/Return_Line_item__c/fields/Total_returns__c.field-meta.xml
<CustomField>
    <fullName>Total_returns__c</fullName>
    <label>Total returns</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>